Bug 944398: Inline Math.fround even if its returned value hasn't ever been observed; r=bhackett